# rkg

./: .gitignore  Cargo.toml  README.md  main.rs
.github/workflows/: release.yml  test.yml
docs/: cheatsheet.md  spec.md
docs/releases/: v0.3.0.md
scripts/: ci-smoke.sh
src/: ast.rs  engine.rs  grid.rs  main.rs  parser.rs  record.rs  tests.rs  util.rs
src/grid/: coords.rs  line.rs  mod.rs  ops.rs
src/record/: aggs.rs  mod.rs  ops.rs  reshape.rs
